@@ -1,106 +1,156 @@
 package com.sonnk.product.api;
 
-import com.sonnk.product.api.dto.ApiError;
+import com.sonnk.sandbox.dto.ValidationErrorDTO;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.validation.ConstraintViolationException;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.ProblemDetail;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
-import java.time.LocalDateTime;
-import java.util.List;
+import java.net.URI;
+import java.time.Instant;
+import java.util.*;
+import java.util.stream.Collectors;
 
 /**
- * Global exception handler chuẩn hoá error response cho REST API.
+ * Global exception handler implementing RFC 7807: Problem Details for HTTP APIs.
+ * Phase 2 Refactor: Migrated from custom ApiError to ProblemDetail.
  *
- * Mục tiêu:
- * - Không để stacktrace/raw message trả thẳng cho client (senior: 5xx không lộ nội bộ).
- * - Log đầy đủ server-side (stack trace) để debug; response body chỉ message an toàn.
- * - Trả về JSON cố định (status, error, message, path, validationErrors) để FE & log dễ xử lý.
+ * All error responses follow the standard ProblemDetail format with extensions.
  */
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
     private static final Logger log = LoggerFactory.getLogger(GlobalExceptionHandler.class);
-
-    /** Message trả client cho 5xx: không lộ chi tiết lỗi nội bộ (security + UX). */
     private static final String GENERIC_ERROR_MESSAGE = "Internal server error";
 
-    @ExceptionHandler(EntityNotFoundException.class)
-    public ResponseEntity<ApiError> handleNotFound(EntityNotFoundException ex, HttpServletRequest request) {
-        ApiError body = new ApiError(
-                LocalDateTime.now(),
-                HttpStatus.NOT_FOUND.value(),
-                HttpStatus.NOT_FOUND.getReasonPhrase(),
-                ex.getMessage(),
-                request.getRequestURI(),
-                List.of()
-        );
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(body);
-    }
-
+    /**
+     * Handle validation errors: @Valid failed, missing/invalid fields.
+     * Returns 400 Bad Request with detailed validation errors.
+     */
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<ApiError> handleValidation(MethodArgumentNotValidException ex,
-                                                     HttpServletRequest request) {
-        List<String> errors = ex.getBindingResult()
+    public ResponseEntity<ProblemDetail> handleValidation(
+            MethodArgumentNotValidException ex,
+            HttpServletRequest request) {
+
+        ProblemDetail pd = ProblemDetail.forStatus(HttpStatus.BAD_REQUEST);
+        pd.setType(URI.create("https://api.petboby.com/errors/validation-error"));
+        pd.setTitle("Validation Failed");
+        pd.setDetail("Input validation failed");
+        pd.setInstance(URI.create(getRequestPath(request)));
+
+        // Extract validation errors from binding result
+        List<ValidationErrorDTO> validationErrors = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
-                .map(this::formatFieldError)
-                .toList();
+                .map(fe -> new ValidationErrorDTO(fe.getField(), fe.getDefaultMessage()))
+                .collect(Collectors.toList());
 
-        ApiError body = new ApiError(
-                LocalDateTime.now(),
-                HttpStatus.BAD_REQUEST.value(),
-                HttpStatus.BAD_REQUEST.getReasonPhrase(),
-                "Validation failed",
-                request.getRequestURI(),
-                errors
-        );
-        return ResponseEntity.badRequest().body(body);
+        // Add RFC 7807 extensions
+        pd.setProperty("traceId", extractOrGenerateTraceId(request));
+        pd.setProperty("timestamp", Instant.now().toString());
+        pd.setProperty("validationErrors", validationErrors);
+
+        return ResponseEntity.badRequest().body(pd);
     }
 
+    /**
+     * Handle constraint violations: @NotNull, @Range, custom validators failed.
+     * Returns 400 Bad Request with constraint violation details.
+     */
     @ExceptionHandler(ConstraintViolationException.class)
-    public ResponseEntity<ApiError> handleConstraintViolation(ConstraintViolationException ex,
-                                                              HttpServletRequest request) {
-        List<String> errors = ex.getConstraintViolations().stream()
-                .map(v -> v.getPropertyPath() + ": " + v.getMessage())
-                .toList();
+    public ResponseEntity<ProblemDetail> handleConstraintViolation(
+            ConstraintViolationException ex,
+            HttpServletRequest request) {
 
-        ApiError body = new ApiError(
-                LocalDateTime.now(),
-                HttpStatus.BAD_REQUEST.value(),
-                HttpStatus.BAD_REQUEST.getReasonPhrase(),
-                "Constraint violation",
-                request.getRequestURI(),
-                errors
-        );
-        return ResponseEntity.badRequest().body(body);
+        ProblemDetail pd = ProblemDetail.forStatus(HttpStatus.BAD_REQUEST);
+        pd.setType(URI.create("https://api.petboby.com/errors/constraint-violation"));
+        pd.setTitle("Constraint Violation");
+        pd.setDetail("Business rule or constraint validation failed");
+        pd.setInstance(URI.create(getRequestPath(request)));
+
+        // Extract constraint violations
+        List<ValidationErrorDTO> violations = ex.getConstraintViolations()
+                .stream()
+                .map(cv -> new ValidationErrorDTO(
+                        cv.getPropertyPath().toString(),
+                        cv.getMessage()
+                ))
+                .collect(Collectors.toList());
+
+        pd.setProperty("traceId", extractOrGenerateTraceId(request));
+        pd.setProperty("timestamp", Instant.now().toString());
+        pd.setProperty("validationErrors", violations);
+
+        return ResponseEntity.badRequest().body(pd);
     }
 
+    /**
+     * Handle not found: EntityNotFoundException for missing resources.
+     * Returns 404 Not Found.
+     */
+    @ExceptionHandler(EntityNotFoundException.class)
+    public ResponseEntity<ProblemDetail> handleNotFound(
+            EntityNotFoundException ex,
+            HttpServletRequest request) {
+
+        ProblemDetail pd = ProblemDetail.forStatus(HttpStatus.NOT_FOUND);
+        pd.setType(URI.create("https://api.petboby.com/errors/not-found"));
+        pd.setTitle("Not Found");
+        pd.setDetail(ex.getMessage() != null ? ex.getMessage() : "Resource not found");
+        pd.setInstance(URI.create(getRequestPath(request)));
+
+        pd.setProperty("traceId", extractOrGenerateTraceId(request));
+        pd.setProperty("timestamp", Instant.now().toString());
+
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(pd);
+    }
+
+    /**
+     * Handle generic/unexpected exceptions.
+     * Returns 500 Internal Server Error.
+     *
+     * Senior pattern: Log FULL details server-side (stack trace, variables, SQL).
+     * Client receives GENERIC message only (no stack trace, no schema info).
+     */
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<ApiError> handleGeneric(Exception ex, HttpServletRequest request) {
-        // Senior: log đầy đủ server-side; client chỉ nhận message chung, không lộ stack/chi tiết.
-        log.error("Unhandled exception on {}: {}", request.getRequestURI(), ex.getMessage(), ex);
-        ApiError body = new ApiError(
-                LocalDateTime.now(),
-                HttpStatus.INTERNAL_SERVER_ERROR.value(),
-                HttpStatus.INTERNAL_SERVER_ERROR.getReasonPhrase(),
-                GENERIC_ERROR_MESSAGE,
-                request.getRequestURI(),
-                List.of()
-        );
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(body);
+    public ResponseEntity<ProblemDetail> handleGeneric(
+            Exception ex,
+            HttpServletRequest request) {
+
+        log.error("Unhandled exception on {}", getRequestPath(request), ex);
+
+        ProblemDetail pd = ProblemDetail.forStatus(HttpStatus.INTERNAL_SERVER_ERROR);
+        pd.setType(URI.create("https://api.petboby.com/errors/internal-error"));
+        pd.setTitle("Internal Server Error");
+        pd.setDetail(GENERIC_ERROR_MESSAGE);
+        pd.setInstance(URI.create(getRequestPath(request)));
+
+        pd.setProperty("traceId", extractOrGenerateTraceId(request));
+        pd.setProperty("timestamp", Instant.now().toString());
+
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(pd);
     }
 
-    private String formatFieldError(FieldError error) {
-        return error.getField() + ": " + error.getDefaultMessage();
+    private String getRequestPath(HttpServletRequest request) {
+        String path = request.getRequestURI();
+        String query = request.getQueryString();
+        return query != null ? path + "?" + query : path;
+    }
+
+    private String extractOrGenerateTraceId(HttpServletRequest request) {
+        String traceId = request.getHeader("X-Trace-Id");
+        if (traceId == null || traceId.isEmpty()) {
+            traceId = UUID.randomUUID().toString();
+        }
+        return traceId;
     }
 }
 
